# AatGo

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults  version_bump.py  version_state.json
docs/: design.md
main/: CMakeLists.txt
main/include/: antenna_control.h  board.h  buzzer.h  config_store.h  crsf_parser.h  espnow_rx.h  gps_tracker.h  log_service.h  nvs_store.h  pointing_calc.h  servo_driver.h  web_calib.h  wifi_config.h
main/src/: antenna_control.c  app_main.c  buzzer.c  config_store.c  crsf_parser.c  espnow_rx.c  gps_tracker.c  log_service.c  nvs_store.c  pointing_calc.c  servo_driver.c  web_calib.c  wifi_config.c
main/web/: calib.html
